--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,9 +1,6 @@
 @import 'variables';
 
-h1{
-    color: $red-color;
-}
-
-h2{
-    color: green;
+.card-gundam-item {
+    margin-top: 18px;
+    margin-bottom: 16px;
 }
