--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -4,3 +4,10 @@
     margin-top: 18px;
     margin-bottom: 16px;
 }
+
+.user-avatar {
+    width: 28px;
+    height: 28px;
+    border-radius: 50px;
+    margin-right: 4px;
+}
