--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -1,5 +1,5 @@
 <div class="mt-4">
-    <form method="GET" action="/news">
+    <form method="GET" action="/gundams/show">
         <div class="form-group">
             <label for="search-input">Find Gundam</label>
             <input type="text" name="q" class="form-conextrol" id="search-input" placeholder="Enter name of Gundam">
