--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -2,7 +2,14 @@
 
 .card-gundam-item {
     margin-top: 18px;
-    margin-bottom: 16px;
+
+}
+
+.card-img-top {
+    width: 260px;
+    height: 260px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .user-avatar {
@@ -10,4 +17,10 @@
     height: 28px;
     border-radius: 50px;
     margin-right: 4px;
+}
+
+.logo {
+    width: 50px;
+    height: 50px;
+
 }
